Fix: variations service not processing studies on ChromeOS.

This is caused by not setting chrome channel before initializing FeatureList in
early startup, which was introduced in CL (https://crbug.com/1173163). In this
CL, we make GetChannel() call the SetChannel() if the channel hasn't been set
yet.

Bug: 896416
Change-Id: Id89c199779074d762f1d16edc711fedaaab66694
Reviewed-on: https://chromium-review.googlesource.com/c/1287850
Commit-Queue: Xi Han <hanxi@chromium.org>
Reviewed-by: Robert Kaplow (sloooow) <rkaplow@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601119}
Former-commit-id: 94b2aa6c3148710e35d788a2bcb2617caff0f05d